--- a/scss/block/_better.scss
+++ b/scss/block/_better.scss
@@ -11,7 +11,7 @@
     &__right {
         &::after {
             content: "";
-            background-image: url(/img/betterRow.svg);
+            background-image: url(../img/betterRow.svg);
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
@@ -24,7 +24,7 @@
 
         &::before {
             content: "";
-            background-image: url(/img/near_sircle.svg);
+            background-image: url(../img/near_sircle.svg);
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
