--- a/scss/block/_near.scss
+++ b/scss/block/_near.scss
@@ -12,7 +12,7 @@
 
 .near__left::after {
     content: "";
-    background-image: url(/img/betterRow.svg);
+    background-image: url(../img/betterRow.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -26,7 +26,7 @@
 
 .near__left::before {
     content: "";
-    background-image: url(/img/near_sircle.svg);
+    background-image: url(../img/near_sircle.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
