--- a/scss/block/_hero.scss
+++ b/scss/block/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
   background-repeat: no-repeat;
-  background-image: url("/img/hero-bg.jpg");
+  background-image: url("../img/hero-bg.jpg");
   background-position: center;
   background-size: cover;
   position: relative;
@@ -21,7 +21,7 @@
   width: 186px;
   height: 62px;
   background-repeat: no-repeat;
-  background-image: url("/img/hero_dots.svg");
+  background-image: url("../img/hero_dots.svg");
   position: absolute;
   right: 0;
   bottom: 24%;
@@ -57,7 +57,7 @@
   width: 460px;
   height: 152px;
   background-repeat: no-repeat;
-  background-image: url("/img/hero_arrow.svg");
+  background-image: url("../img/hero_arrow.svg");
   position: absolute;
   top: 40px;
   left: 112%;
