--- a/scss/block/_about.scss
+++ b/scss/block/_about.scss
@@ -3,3 +3,7 @@
 @import "./better";
 @import "./values";
 @import "./faqs";
+@import "./career";
+@import "./join";
+@import "./us";
+@import "./barshure";
