--- a/css/main.css
+++ b/css/main.css
@@ -416,6 +416,10 @@ body {
   border-radius: 10px;
 }
 
+p {
+  margin: unset;
+}
+
 .main_header {
   padding: 22px 0;
 }
@@ -916,6 +920,250 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 30px;
+}
+
+.career__img {
+  width: 100%;
+}
+
+.join {
+  margin: 100px 0;
+  position: relative;
+}
+.join__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.join__left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+.join__title {
+  color: #495567;
+  font-family: Space Mono;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: -2.143px;
+  max-width: 445px;
+  width: 100%;
+}
+.join__txt {
+  color: #939caa;
+  max-width: 445px;
+  width: 100%;
+  font-family: Lexend Deca;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 25px;
+}
+.join__btn {
+  color: #FFF;
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 25px;
+  padding: 14px 47px;
+  cursor: pointer;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  display: inline-block;
+  border: 1px solid #fcb72b;
+  background: #fcb72b;
+}
+.join__btn:hover {
+  background: transparent;
+  color: #fcb72b;
+}
+.join__left::after {
+  content: "";
+  background-image: url(../img/telemetry_shape.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 785px;
+  height: 160px;
+  position: absolute;
+  bottom: 0;
+  right: 0%;
+}
+.join__left::before {
+  content: "";
+  background-image: url(../img/join_sircle.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 110px;
+  height: 445px;
+  position: absolute;
+  right: 0;
+}
+.join__img {
+  border-radius: 50%;
+}
+
+.us {
+  margin: 100px 0;
+}
+.us__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.us__title {
+  color: #495567;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: -2.143px;
+}
+.us__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
+}
+.us__cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.us__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.us__info_title {
+  color: #495567;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  letter-spacing: -1.071px;
+}
+.us__info_txt {
+  color: #939caa;
+  font-family: Lexend Deca;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 25px;
+  max-width: 350px;
+  width: 100%;
+  text-align: center;
+}
+
+.brashure {
+  margin: 100px 0;
+}
+.brashure__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.brashure__cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 30px;
+}
+.brashure__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background: #F2F5F9;
+  padding: 32px 40px;
+}
+.brashure__manager {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.brashure__title {
+  color: #495567;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  letter-spacing: -1.071px;
+}
+.brashure__txt {
+  color: #495567;
+  font-family: Lexend Deca;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 25px;
+}
+.brashure__btn {
+  color: #FFF;
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 25px;
+  padding: 14px 47px;
+  cursor: pointer;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  display: inline-block;
+  border: 1px solid #fcb72b;
+  background: #fcb72b;
+}
+.brashure__btn:hover {
+  background: transparent;
+  color: #fcb72b;
 }
 
 .info {
